--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -13,7 +13,7 @@ html(class="no-js", lang="en")
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
 
-		title Balloons.IO
+		title Perber
 
 		meta(name="description", content="")
 		meta(name="author", content="")
@@ -22,7 +22,10 @@ html(class="no-js", lang="en")
 
 		// link(rel="stylesheet", href="https://s3.amazonaws.com/social-buttons/css/social-buttons.css")
 		link(rel="stylesheet", href="/js/libs/fancy-box/jquery.fancybox.css")
-		link(rel="stylesheet", href="/css/style.css")
+		link(rel="stylesheet", href="/css/semantic.min.css")
+		link(rel="stylesheet", href="/css/font-awesome.min.css")
+		link(rel="stylesheet", href="/css/perber.css")
+		link(rel="stylesheet", href="/css/perber.css")
   
 		script(src="/js/libs/jquery-1.7.1.min.js")
 		script(src="/js/libs/modernizr-2.5.3.min.js")
