--- a/perber/views/themes/default/index.jade
+++ b/perber/views/themes/default/index.jade
@@ -5,7 +5,7 @@ block content
 		.column.row.center.aligned.middle
 			.column.vertical
 				.home-card
-					img.logo(src='img/logo.png', srcset="logo@2x.png 2x" alt='Perber')
+					img.logo(src='img/logo.png', srcset="logo@2x.png 2x", alt='Perber')
 					h3 
 					p
 						a.ui.button.teal(href="/auth/douban",style="font-weight:normal")
