--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -16,7 +16,7 @@ html(class="no-js", lang="en")
 		title Perber
 
 		meta(name="description", content="")
-		meta(name="author", content="")
+		meta(name="author", content="hanjiyun")
 		meta(name="viewport", content="width=device-width, initial-scale=1")
 		
 
@@ -25,7 +25,7 @@ html(class="no-js", lang="en")
 		link(rel="stylesheet", href="/css/semantic.min.css")
 		link(rel="stylesheet", href="/css/font-awesome.min.css")
 		link(rel="stylesheet", href="/css/perber.css")
-		link(rel="stylesheet", href="/css/perber.css")
+		//link(rel="stylesheet", href="/css/perber.css")
   
 		script(src="/js/libs/jquery-1.7.1.min.js")
 		script(src="/js/libs/modernizr-2.5.3.min.js")
