modify css header. button css.

--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -26,6 +26,7 @@ html{
     color: #fff!important;
     font-size: 14px;*/
     text-transform: none;
+    font-weight: 100;
 }
 
 /*.home-card .ui.basic.button:hover{
