--- a/perber/views/themes/default/index.jade
+++ b/perber/views/themes/default/index.jade
@@ -10,11 +10,11 @@ block content
 					h3 
 						|Just Talk
 					.buttons.ui
-						a.ui.button.green(href="/auth/douban",style="font-weight:normal")
+						a.ui.button.green(href="/auth/douban")
 							|Douban
-						a.ui.button.facebook(href="/auth/facebook",style="font-weight:normal")
+						a.ui.button.facebook(href="/auth/facebook")
 							|Facebook
-						a.ui.button.twitter(href="/auth/twitter",style="font-weight:normal")
+						a.ui.button.twitter(href="/auth/twitter")
 							|Twitter
 					.copyright
 						a(href="http://www.flickr.com/photos/basf/6923264227/", target="_blank")
