--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -3,7 +3,55 @@
 * @Date:   2013-11-02 21:18:23
 * @Email:  jiyun@han.im
 * @Last modified by:   hanjiyun
-* @Last Modified time: 2013-11-03 18:10:23
+* @Last Modified time: 2013-11-03 18:49:14
+*/
+
+/*
+
+                              _,add8ba,
+                            ,d888888888b,
+                           d8888888888888b                        _,ad8ba,_
+                          d888888888888888)                     ,d888888888b,
+                          I8888888888888888 _________          ,8888888888888b
+                __________`Y88888888888888P"""""""""""baaa,__ ,888888888888888,
+            ,adP"""""""""""9888888888P""^                 ^""Y8888888888888888I
+         ,a8"^           ,d888P"888P^                           ^"Y8888888888P'
+       ,a8^            ,d8888'                                     ^Y8888888P'
+      a88'           ,d8888P'                                        I88P"^
+    ,d88'           d88888P'                                          "b,
+   ,d88'           d888888'                                            `b,
+  ,d88'           d888888I                                              `b,
+  d88I           ,8888888'            ___                                `b,
+ ,888'           d8888888          ,d88888b,              ____            `b,
+ d888           ,8888888I         d88888888b,           ,d8888b,           `b
+,8888           I8888888I        d8888888888I          ,88888888b           8,
+I8888           88888888b       d88888888888'          8888888888b          8I
+d8886           888888888       Y888888888P'           Y8888888888,        ,8b
+88888b          I88888888b      `Y8888888^             `Y888888888I        d88,
+Y88888b         `888888888b,      `""""^                `Y8888888P'       d888I
+`888888b         88888888888b,                           `Y8888P^        d88888
+ Y888888b       ,8888888888888ba,_          _______        `""^        ,d888888
+ I8888888b,    ,888888888888888888ba,_     d88888888b               ,ad8888888I
+ `888888888b,  I8888888888888888888888b,    ^"Y888P"^      ____.,ad88888888888I
+  88888888888b,`888888888888888888888888b,     ""      ad888888888888888888888'
+  8888888888888698888888888888888888888888b_,ad88ba,_,d88888888888888888888888
+  88888888888888888888888888888888888888888b,`"""^ d8888888888888888888888888I
+  8888888888888888888888888888888888888888888baaad888888888888888888888888888'
+  Y8888888888888888888888888888888888888888888888888888888888888888888888888P
+  I888888888888888888888888888888888888888888888P^  ^Y8888888888888888888888'
+  `Y88888888888888888P88888888888888888888888888'     ^88888888888888888888I
+   `Y8888888888888888 `8888888888888888888888888       8888888888888888888P'
+    `Y888888888888888  `888888888888888888888888,     ,888888888888888888P'
+     `Y88888888888888b  `88888888888888888888888I     I888888888888888888'
+       "Y8888888888888b  `8888888888888888888888I     I88888888888888888'
+         "Y88888888888P   `888888888888888888888b     d8888888888888888'
+            ^""""""""^     `Y88888888888888888888,    888888888888888P'
+                  Normand    "8888888888888888888b,   Y888888888888P^
+                  Veilleux    `Y888888888888888888b   `Y8888888P"^
+                                "Y8888888888888888P     `""""^
+                                  `"YY88888888888P'
+                                       ^""""""""'
+
 */
 
 /*******************************
@@ -49,6 +97,7 @@ h3::selection {
 html,
 body {
     font-size: 15px;
+    height: 100%
 }
 
 body {
@@ -56,9 +105,8 @@ body {
     margin: 0px;
     padding: 0px;
     color: #555555;
-    min-width: 320px;
+    min-width: 310px;
 
-    height: 100%;
     font-weight: 300;
     letter-spacing: 1px;
 }
@@ -69,8 +117,10 @@ h3,
 h4,
 h5 {
   font-family: "Roboto", "Source Sans Pro", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+  font-weight: 400;
+  letter-spacing: 0
 }
-
+.ui.grid{margin: 0;}
 /*
 p,
 ul,
@@ -147,62 +197,14 @@ a:hover {
 }
 
 
-
-/*
-
-                              _,add8ba,
-                            ,d888888888b,
-                           d8888888888888b                        _,ad8ba,_
-                          d888888888888888)                     ,d888888888b,
-                          I8888888888888888 _________          ,8888888888888b
-                __________`Y88888888888888P"""""""""""baaa,__ ,888888888888888,
-            ,adP"""""""""""9888888888P""^                 ^""Y8888888888888888I
-         ,a8"^           ,d888P"888P^                           ^"Y8888888888P'
-       ,a8^            ,d8888'                                     ^Y8888888P'
-      a88'           ,d8888P'                                        I88P"^
-    ,d88'           d88888P'                                          "b,
-   ,d88'           d888888'                                            `b,
-  ,d88'           d888888I                                              `b,
-  d88I           ,8888888'            ___                                `b,
- ,888'           d8888888          ,d88888b,              ____            `b,
- d888           ,8888888I         d88888888b,           ,d8888b,           `b
-,8888           I8888888I        d8888888888I          ,88888888b           8,
-I8888           88888888b       d88888888888'          8888888888b          8I
-d8886           888888888       Y888888888P'           Y8888888888,        ,8b
-88888b          I88888888b      `Y8888888^             `Y888888888I        d88,
-Y88888b         `888888888b,      `""""^                `Y8888888P'       d888I
-`888888b         88888888888b,                           `Y8888P^        d88888
- Y888888b       ,8888888888888ba,_          _______        `""^        ,d888888
- I8888888b,    ,888888888888888888ba,_     d88888888b               ,ad8888888I
- `888888888b,  I8888888888888888888888b,    ^"Y888P"^      ____.,ad88888888888I
-  88888888888b,`888888888888888888888888b,     ""      ad888888888888888888888'
-  8888888888888698888888888888888888888888b_,ad88ba,_,d88888888888888888888888
-  88888888888888888888888888888888888888888b,`"""^ d8888888888888888888888888I
-  8888888888888888888888888888888888888888888baaad888888888888888888888888888'
-  Y8888888888888888888888888888888888888888888888888888888888888888888888888P
-  I888888888888888888888888888888888888888888888P^  ^Y8888888888888888888888'
-  `Y88888888888888888P88888888888888888888888888'     ^88888888888888888888I
-   `Y8888888888888888 `8888888888888888888888888       8888888888888888888P'
-    `Y888888888888888  `888888888888888888888888,     ,888888888888888888P'
-     `Y88888888888888b  `88888888888888888888888I     I888888888888888888'
-       "Y8888888888888b  `8888888888888888888888I     I88888888888888888'
-         "Y88888888888P   `888888888888888888888b     d8888888888888888'
-            ^""""""""^     `Y88888888888888888888,    888888888888888P'
-                  Normand    "8888888888888888888b,   Y888888888888P^
-                  Veilleux    `Y888888888888888888b   `Y8888888P"^
-                                "Y8888888888888888P     `""""^
-                                  `"YY88888888888P'
-                                       ^""""""""'
-
-*/
-
-body.home-page{
+/*landing*/
+#home-wrapper{
     height: 100%;
     background: #f1f1f1 url(../img/bg-photo-2.jpg) center center fixed no-repeat;
     background-size: cover;
 }
 .home-card{padding-top: 50px;position: relative;z-index: 2}
-.home-page:after{
+.bg-overlay:after{
     content: "";
     width: 100%;
     height: 100%;
@@ -210,9 +212,9 @@ body.home-page{
     top: 0;
     left:0;
     background: rgba(0,0,0,0.2);
-    background:-moz-radial-gradient(50% 20%, rgba(0,0,0,0.15), rgba(0,0,0,0.88));
-    background:-webkit-radial-gradient(50% 20%, rgba(0,0,0,0.15), rgba(0,0,0,0.88));
-    background:-webkit-gradient(radial, 0 50%, 0 20%, from(rgba(0,0,0,0.15)), to(rgba(0,0,0,0.88)));
+    background:-moz-radial-gradient(50% 20%, rgba(0,0,0,0.1), rgba(0,0,0,0.8));
+    background:-webkit-radial-gradient(50% 20%, rgba(0,0,0,0.1), rgba(0,0,0,0.8));
+    background:-webkit-gradient(radial, 0 50%, 0 20%, from(rgba(0,0,0,0.1)), to(rgba(0,0,0,0.8)));
     z-index: 1;
 }
 .home-card h3{font-weight: 100;color: #fff;font-size: 69px;line-height: 1}
@@ -220,18 +222,10 @@ body.home-page{
 .logo img{max-width: 100%}
 
 .home-card .ui.button{
-/*    background-color: rgba(0,0,0,0.1)!important;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0);
-    color: #fff!important;
-    font-size: 14px;*/
     text-transform: none;
     font-weight: 100;
 }
 
-/*.home-card .ui.basic.button:hover{
-    background-color: #009A93!important;
-    box-shadow: 0 -0.2rem 0 rgba(0, 0, 0, 0.1) inset!important;
-}*/
 .copyright{
     font-size: 9px;
     background: rgba(0,0,0,0.7);
@@ -246,6 +240,19 @@ body.home-page{
     text-decoration: none;
 }
 
+/*room-list*/
+#room-list-wrapper{
+    height: 100%;
+    background: #f1f1f1 url(../img/bg-photo-3.jpg) center center fixed no-repeat;
+    background-size: cover;
+}
+.room-list{
+    padding-top: 50px;
+    position: relative;
+    z-index: 2
+}
+
+/*Responsive*/
 @media(max-width: 320px){
     .home-card h3{
         font-size: 40px;
