--- a/perber/views/themes/default/index.jade
+++ b/perber/views/themes/default/index.jade
@@ -8,10 +8,9 @@ block content
 				.column.row.center.aligned.middle
 					.column.vertical
 						.home-card
-							.logo
-								img(src='img/logo.png', data-at2x="img/logo@2x.png", alt='Perber')
-							h3 
-								|Perber
+							.logo P
+								// img(src='img/logo.png', data-at2x="img/logo@2x.png", alt='Perber')
+							h3 Perber
 							.buttons.ui
 								a.ui.button.green(href="/auth/douban")
 									|Douban
