--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -25,7 +25,8 @@ html(class="no-js", lang="en")
 		link(rel="stylesheet", href="/css/semantic.min.css")
 		link(rel="stylesheet", href="/css/font-awesome.min.css")
 		link(rel="stylesheet", href="/css/perber.css")
-		link(href='http://fonts.googleapis.com/css?family=Nova+Script|Monoton|Baumans|Roboto:300,100,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic|Raleway:400,200,900,800,700,600,500,300,100',rel='stylesheet',type='text/css')
+		link(href='http://fonts.googleapis.com/css?family=Baumans|Roboto:100',rel='stylesheet',type='text/css')
+		//link(href='http://fonts.googleapis.com/css?family=Nova+Script|Monoton|Baumans|Roboto:300,100,100italic,300italic,400,400italic,500,500italic,700,700italic,900,900italic|Raleway:400,200,900,800,700,600,500,300,100',rel='stylesheet',type='text/css')
 		// link(rel="stylesheet", href="/css/style.css")
   
 		script(type="text/javascript",src="/js/libs/jquery-1.7.1.min.js")
