--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -12,6 +12,7 @@ html(class="no-js", lang="en")
 	head
 		meta(charset="utf-8")
 		meta(http-equiv="X-UA-Compatible", content="IE=edge, chrome=1")
+		meta(name="apple-mobile-web-app-capable", content="yes")
 
 		title Perber
 
